@@ -1,4 +1,16 @@
 ------------------------------------------------------------------------
+r95 | tholbroo | 2004-05-19 10:09:57 -0700 (Wed, 19 May 2004) | 2 lines
+
+Version number change for new release to CPAN.
+
+------------------------------------------------------------------------
+r94 | tholbroo | 2004-05-19 10:08:41 -0700 (Wed, 19 May 2004) | 4 lines
+
+Simplified code using select_val() as per Tony Bowden's suggestion.
+Fixed test count.
+
+
+------------------------------------------------------------------------
 r92 | tholbroo | 2004-05-18 10:59:44 -0700 (Tue, 18 May 2004) | 2 lines
 
 Updated version number for CPAN release.
